# skitty

./: .env.sample  .gitignore  README.md  Skitty_WBS.xlsx  main.py  pyproject.toml  run_data_pipeline.sh  run_pytest.sh
.github/workflows/: ci.yml
eval/: README.md  evaluation.py
scripts/: run_data_pipeline.sh  run_evaluate.sh  run_merge.sh  run_pytest.sh  run_qat.sh  run_qat_quantize.sh  run_quantize.sh  run_train.sh  run_upload.sh  run_vllm_server.sh
src/: data_pipeline.py
src/config/: README.md  data_config.py  env_config.py  environment.py  gemma3-fsdp.yaml  gemma3-full.yaml  gemma3-qat.yaml  gemma3.yaml
src/data/: README.md  constants.py  data_argumentation.py  data_augmentation.py  data_dedup.py  data_filtering.py  data_io.py  data_normalize.py  data_processing.py  dedup_duplicated.py
src/data/utils/: __init__.py  io.py  normalize.py
src/optimizer/: README.md  __init__.py  quantize.py
src/service/: __init__.py  data_pipeline.py
src/utils/: enum.py  exception.py  log.py
tests/integration/: test_data_integration.py  test_eval_integration.py
tests/unit/: test_data_argumentation.py  test_data_dedup_io.py  test_data_filtering.py  test_data_modules.py  test_data_pipeline.py  test_data_processing.py  test_data_unittest.py  test_evaluation.py
