[project]
name = "skitty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pyarrow>=21.0.0",
    "simhash>=2.1.2",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
