[project]
name = "skitty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "gcloud>=0.18.3",
    "google-genai>=1.31.0",
    "huggingface>=0.0.1",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "simhash>=2.1.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
